<resources>
    <string name="app_name">ProyectoPrimerTrimestre</string>
    <string name="tvTitle">The Funny Bunny</string>
    <string name="ivLogo">Logo</string>
    <string name="btnAlta">Alta Usuario</string>
    <string name="ivPet">Pet</string>
    <string name="btnBack">Volver</string>
    <string name="etNombre">Nombre</string>
    <string name="etApellidos">Apellidos</string>
    <string name="etTelefono">Telefono</string>
    <string name="etEmail">Email</string>
    <string name="etDireccion">Direccion</string>
    <string name="tvSexo">Sexo</string>
    <string name="etFechaNacimiento">Fecha de Nacimiento</string>
    <string name="tvIntereses">Intereses</string>
    <string name="rbHombre">Hombre</string>
    <string name="rbMujer">Mujer</string>
    <string name="btnEnviar">Enviar</string>
    <string name="cbCine">Cine</string>
    <string name="cbDeportes">Deportes</string>
    <string name="cbArte">Arte</string>
    <string name="tvWelcome">Bienvenido a mi App</string>
</resources>